# purser-2

./: .gitignore  AGENTS.md  README.md  hello.py  main.py  purser.toml  pyproject.toml
.beads/: metadata.json
.claude/agents/: purser-build-all.md  purser-worker.md
.claude/commands/: purser-add-spec.md  purser-build-all.md  purser-build.md  purser-init.md  purser-plan.md
.github/agents/: purser-build-all.agent.md  purser-worker.agent.md
.github/prompts/: purser-add-spec.prompt.md  purser-build-all.prompt.md  purser-build.prompt.md  purser-init.prompt.md  purser-plan.prompt.md
docs/: agent-augmentation.md
formulas/: feature.toml  planning.toml  spec_intake.toml
prompts/pm/: intake.md  plan.md
prompts/worker/: execute.md
purser/: __init__.py  beads.py  cli.py  config.py  launch.py  lint.py  memory.py  models.py  planner.py  protocol.py  spec.py
purser/adapters/: __init__.py  base.py  claude.py  ollama.py  openai_compat.py
purser/agents/: __init__.py  base.py  pm.py  worker.py
purser/auth/: __init__.py  callback.py  config.py  github.py  google.py  handler.py  jwt_manager.py  models.py  repository.py  routes.py  security.py  service.py  session_manager.py
scripts/: init-purser
specs/: discord-claude-channels.md  github-integration-sync.md  hello-world-multilingual.md  migrate-to-claude-code-channels.md  project-inspection-upgrade-execution.md  purser-framework-documentation.md  repo-initialization-routine.md  user-authentication-architecture.md  user-authentication-system.md
tests/: test_gh_integration.py  test_init_cli.py  test_launch.py
(+39 files in other folders)
