[project]
name = "purser"
version = "0.1.0"
description = "Agent-agnostic project management framework using Beads for task orchestration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "duckdb>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
claude = ["anthropic>=0.40"]
openai = ["openai>=1.0"]
all = ["anthropic>=0.40", "openai>=1.0"]

[project.scripts]
purser = "purser.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.7",
    "ty>=0.0.26",
]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["purser"]

[tool.ty.environment]
python-version = "3.12"
